MAPRHADOOP-110: Distributedshell application fix issues MAPRHADOOP-84 and MAPRHADOOP-107